--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -1,8 +1,3 @@
-# set -g pane-border-fg magenta
-# set -g pane-active-border-fg green
-# set -g pane-active-border-bg default
-run-shell ~/.tmux-jump/tmux-jump.tmux
-run-shell ~/.tmux-resurrect/tmux-resurrect/resurrect.tmux
-run-shell ~/.tmux-continuum/tmux-continuum/continuum.tmux
-run-shell ~/.tmux-yank/tmux-yank/yank.tmux
+run-shell /home/jstitt/repos/tmux-yank/yank.tmux
 set -g set-clipboard on
+set -g pane-active-border-style fg=colour28,bg=default
