--- a/league/game.cfg
+++ b/league/game.cfg
@@ -1,6 +1,8 @@
 
 
 [General]
+EnableCosmeticArenaAudioTFT=1
+EnableChampionSpellPreview=1
 HideExternalBrowserPrompt=0
 EnableGlobalSpellCastNotifications=0
 EnableCosmeticArenaAudio=0
@@ -38,7 +40,7 @@ WaitForVerticalSync=0
 Colors=32
 Height=900
 Width=1600
-CfgVersion=14.2.556.3141
+CfgVersion=14.13.598.9749
 
 [Sound]
 DefaultFXVolume=100
@@ -59,7 +61,7 @@ BudgetTriangleCount=300000
 BudgetDrawCallCount=1000
 EnableGrassSwaying=1
 EnableFXAA=1
-FrameCapType=9
+FrameCapType=8
 ShadowQuality=4
 EffectsQuality=4
 GammaEnabled=1
@@ -68,7 +70,8 @@ CharacterQuality=4
 AutoPerformanceSettings=0
 
 [HUD]
-ChatChannelVisibility=0
+HidePlayerNames=0
+ChatChannelVisibility=1
 HideReciprocityFist=1
 ObjectiveVoteScale=0.0000
 ShowOffScreenPointsOfInterest=0
@@ -99,7 +102,7 @@ ItemShopResizeWidth=260
 ItemShopPrevResizeHeight=900
 ItemShopPrevResizeWidth=1600
 GlobalScale=1.0000
-MinimapScale=1.5000
+MinimapScale=1.9200
 PracticeToolScale=0.0000
 ItemShopItemDisplayMode=1
 ItemShopStartPane=1
@@ -128,8 +131,8 @@ ShowTeamFramesOnLeft=0
 FlipMiniMap=0
 
 [Chat]
-NativeOffsetY=0.7344
-NativeOffsetX=0.2119
+NativeOffsetY=0.7400
+NativeOffsetX=0.2131
 Transparency=0.0000
 ChatY=0
 ChatX=0
@@ -228,10 +231,10 @@ MasterMute=0
 AnnouncerMute=0
 AmbienceVolume=0.7500
 AmbienceMute=0
-VoiceVolume=0.7500
+VoiceVolume=0.0600
 AnnouncerVolume=0.7500
 SfxVolume=0.7500
-MasterVolume=1.0000
+MasterVolume=0.1400
 
 
 [TFTChat]
@@ -274,4 +277,10 @@ ScaleVideo=720
 AudioQuality=1
 
 [TFT]
+TFTEnablePushNotifications=0
 TFTDisableMusicSourceInfo=0
+
+[ItemShop]
+NativeOffsetY=-0.0278
+NativeOffsetX=0.0988
+CurrentTab=1
