--- a/league/LCULocalPreferences.yaml
+++ b/league/LCULocalPreferences.yaml
@@ -10,8 +10,9 @@ lol-audio:
         banChampVoEnabled: false
         loginMusicEnabled: false
         masterSoundEnabled: true
-        masterVolume: 29
+        masterVolume: 27
         musicEnabled: false
+        musicVolume: 26
         pickChampVoEnabled: false
         sfxVolume: 27
         voiceVolume: 13.500000
@@ -22,67 +23,68 @@ lol-clash:
         - "registration_open_tournament_481"
         - "registration_open_tournament_1241"
         - "registration_open_tournament_581"
-        - "registration_open_tournament_1221"
-        - "lock_in_open_tournament_3981_phase_4161"
-        - "registration_open_tournament_3021"
         - "registration_open_tournament_2541"
         - "registration_open_tournament_561"
-        - "registration_open_tournament_2981"
+        - "lock_in_open_tournament_3981_phase_4161"
+        - "registration_open_tournament_3021"
+        - "registration_open_tournament_1221"
         - "registration_open_tournament_1801"
         - "registration_open_tournament_2761"
-        - "registration_open_tournament_3781"
+        - "registration_open_tournament_2981"
         - "lock_in_open_tournament_3381_phase_3501"
-        - "registration_open_tournament_2041"
+        - "registration_open_tournament_3781"
         - "lock_in_open_tournament_581_phase_561"
-        - "registration_open_tournament_3721"
+        - "registration_open_tournament_2041"
         - "lock_in_open_tournament_1241_phase_1221"
-        - "registration_open_tournament_4303"
+        - "registration_open_tournament_3721"
         - "registration_open_tournament_3801"
-        - "registration_open_tournament_3962"
+        - "registration_open_tournament_4303"
         - "registration_open_tournament_1821"
+        - "registration_open_tournament_3962"
         - "registration_open_tournament_1861"
-        - "registration_open_tournament_4343"
+        - "registration_open_tournament_3841"
         - "lock_in_open_tournament_135001_phase_127481"
         - "registration_open_tournament_2161"
         - "lock_in_open_tournament_4303_phase_4483"
-        - "registration_open_tournament_3841"
+        - "registration_open_tournament_4343"
         - "registration_open_tournament_1881"
         - "registration_open_tournament_2181"
-        - "registration_open_tournament_2001"
         - "registration_open_tournament_3961"
-        - "lock_in_open_tournament_2001_phase_1981"
+        - "registration_open_tournament_2001"
         - "registration_open_tournament_3361"
+        - "lock_in_open_tournament_2001_phase_1981"
+        - "lock_in_open_tournament_2781_phase_2901"
         - "lock_in_open_tournament_134362_phase_126602"
         - "registration_open_tournament_2061"
-        - "lock_in_open_tournament_2781_phase_2901"
         - "lock_in_open_tournament_2061_phase_2041"
         - "registration_open_tournament_3561"
         - "registration_open_tournament_2221"
-        - "registration_open_tournament_3381"
         - "registration_open_tournament_3002"
+        - "registration_open_tournament_3381"
         - "lock_in_open_tournament_2221_phase_2201"
         - "registration_open_tournament_3521"
-        - "registration_open_tournament_2261"
         - "registration_open_tournament_2801"
-        - "lock_in_open_tournament_3361_phase_3481"
-        - "registration_open_tournament_2442"
+        - "registration_open_tournament_2261"
         - "registration_open_tournament_3001"
+        - "registration_open_tournament_2442"
+        - "lock_in_open_tournament_3361_phase_3481"
         - "registration_open_tournament_3421"
         - "lock_in_open_tournament_2801_phase_2921"
         - "registration_open_tournament_2581"
         - "registration_open_tournament_3821"
         - "registration_open_tournament_2781"
-        - "lock_in_open_tournament_4221_phase_4401"
         - "registration_open_tournament_2821"
+        - "lock_in_open_tournament_4221_phase_4401"
         - "lock_in_open_tournament_2821_phase_2941"
         - "registration_open_tournament_2941"
         - "lock_in_open_tournament_3021_phase_3141"
         - "registration_open_tournament_3101"
         - "registration_open_tournament_3321"
-        - "registration_open_tournament_3461"
         - "lock_in_open_tournament_3961_phase_4141"
+        - "registration_open_tournament_3461"
         - "registration_open_tournament_3681"
         - "lock_in_open_tournament_3681_phase_3821"
+        - "registration_open_tournament_135501"
         - "registration_open_tournament_3861"
         - "registration_open_tournament_3981"
         - "registration_open_tournament_4201"
@@ -90,11 +92,12 @@ lol-clash:
         - "lock_in_open_tournament_4342_phase_4522"
         - "registration_open_tournament_4221"
         - "registration_open_tournament_4241"
-        - "registration_open_tournament_4281"
         - "lock_in_open_tournament_4323_phase_4503"
+        - "registration_open_tournament_4281"
         - "registration_open_tournament_4301"
         - "registration_open_tournament_4322"
         - "lock_in_open_tournament_4322_phase_4502"
+        - "registration_open_tournament_135521"
         - "registration_open_tournament_4342"
         - "registration_open_tournament_4441"
         - "registration_open_tournament_4381"
@@ -127,9 +130,19 @@ lol-clash:
         - "lock_in_open_tournament_135021_phase_127501"
         - "registration_open_tournament_135081"
         - "registration_open_tournament_135141"
+        - "lock_in_open_tournament_135301_phase_127821"
         - "lock_in_open_tournament_135141_phase_127621"
         - "registration_open_tournament_135161"
         - "lock_in_open_tournament_135161_phase_127641"
+        - "registration_open_tournament_135221"
+        - "lock_in_open_tournament_135221_phase_127741"
+        - "registration_open_tournament_135241"
+        - "lock_in_open_tournament_135241_phase_127761"
+        - "registration_open_tournament_135281"
+        - "lock_in_open_tournament_135281_phase_127801"
+        - "registration_open_tournament_135361"
+        - "lock_in_open_tournament_135501_phase_128061"
+        - "lock_in_open_tournament_135521_phase_128081"
     schemaVersion: 1
 lol-collection-champions:
     data:
@@ -175,7 +188,7 @@ lol-parties:
     schemaVersion: 1
 lol-premade-voice:
     data:
-        currentCaptureDeviceHandle: "Default System Device"
+        currentCaptureDeviceHandle: ""
         inputVolume: 0
         vadSensitivity: 65
     schemaVersion: 1
@@ -196,6 +209,11 @@ lol-user-experience:
         potatoModeEnabled: false
         unloadUxInGameEnabled: false
     schemaVersion: 2
+lol-vanguard:
+    data:
+        systemCheckLastSeen: 1713838046467
+        systemCheckPassed: true
+    schemaVersion: 1
 personalized-offers:
     data:
         lastViewedTimestamp: "2019-07-08T23:33:51.507Z"
