update .tmux.conf with nessage
Signed-off-by: Justin Stitt <justinstitt@google.com>

--- a/.byobu/.tmux.conf
+++ b/.byobu/.tmux.conf
@@ -1,4 +1,4 @@
-run-shell /home/jstitt/repos/tmux-yank/yank.tmux
+run-shell $HOME/repos/settings/tmux-yank/yank.tmux
 set -g set-clipboard on
 set -g status-interval 1
 unbind-key C-a
@@ -11,6 +11,7 @@ set -g default-terminal "tmux-256color"
 set -a terminal-features '*:usstyle'
 set -as terminal-overrides ',*:Smulx=\E[4::%p1%dm'
 set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
+# set -g status-right '#(TZ="America/Los_Angeles" date +%%H:%%M:%%S)'
 
 set-option -g status-style bg=colour234,fg=colour9 # bg=bg1, fg=fg1
 set-window-option -g window-status-style bg=colour61,fg=colour9 # bg=yellow, fg=bg1
@@ -30,11 +31,12 @@ set-option -g status-left "\
 #[fg=colour241, bg=colour234]#{?client_prefix,#[fg=colour167],} 💜#{?window_zoomed_flag, 🔍,}\
 #[bg=colour234, fg=colour255] "
 set-option -g status-right "\
-#[fg=colour61, bg=colour234]  #($BYOBU_CONFIG_DIR/weather.sh)\
+#[fg=colour61, bg=colour234]  #($BYOBU_CONFIG_DIR/nessage.sh)\
+#[fg=colour61, bg=colour234] | #($BYOBU_CONFIG_DIR/weather.sh)\
 #[fg=colour61, bg=colour234] \
 #[fg=colour234, bg=colour61]#($BYOBU_CONFIG_DIR/random_emoji.sh)$USER \
-#[fg=colour246, bg=colour234] %a %b %d\
-#[fg=colour109]  %H:%M:%S \
+#[fg=colour246, bg=colour234] #(TZ="America/Los_Angeles" date +%%a\\ %%b\\ %%d)\
+#[fg=colour109]  #(TZ="America/Los_Angeles" date +%%H:%%M:%%S)\
 #[fg=colour248, bg=colour239]"
 
 set-window-option -g window-status-current-format "\
@@ -65,3 +67,10 @@ setw -g history-limit 50000000
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 # run '~/.tmux/plugins/tpm/tpm'
+# run-shell ~/.tmux/plugins/tmux-fingers/tmux-fingers.tmux
+# run-shell ~/.tmux/plugins/tmux-thumbs/tmux-thumbs.tmux
+run-shell ~/.tmux-jump/tmux-jump.tmux
+set -g @jump-key 's'
+set -g display-panes-time 50
+bind-key -n MouseDrag1Status swap-window -d -t=
+EDITOR=nvim
